--- a/css/default.css
+++ b/css/default.css
@@ -6,7 +6,7 @@
 .container{
 	background:rgba(0,0,0,0.7) url(../images/main-bg.jpg);
 	font-size:12px;
-	overflow:hidden;
+	overflow-x:hidden;
 	left: 0;
 	top: 0;
 	bottom: 0;
@@ -22,7 +22,7 @@
 	top: 0;
 	bottom: 0;
 	padding: 5px; 
-	padding-top: 49%;
+	padding-top: 15%;
 }
 #loveHeart{/*float:left;width:670px;height:625px*/}
 #garden{
