--- a/css/default.css
+++ b/css/default.css
@@ -22,9 +22,10 @@
 	top: 0;
 	bottom: 0;
 	padding: 5px; 
-	padding-top: 15%;
 }
-#loveHeart{/*float:left;width:670px;height:625px*/}
+#loveHeart,#content{
+	height: 100%;
+}
 #garden{
 	width:0;
 	height:100%;
@@ -38,11 +39,15 @@
 	font-family:"sans-serif";
 	font-size:24px;
 	color:#30b9b2;
+	height: 100%;
 }
-#messages{   
- 	margin-left: auto;
-    margin-right: auto;
-    width: 415px;
+#messages{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	height: 100%;
+	width: 100%;
 }
 #elapseClock .digit{
 	font-size:36px;
